@@ -1,6 +1,7 @@
 ==== 2.3.0 ====
     * Errors in parsing requests return with 500 Internal Server Error
     * JsonDict and JsonList objects for dict or list json request variant.
+    * JSONGeneratorResponse to returned json from generators as generator.
 
 ==== 2.2.0 ====
     * openapi after_request example fix
